# ethercat_igh_dkms

./: .gitignore  README.md  pyproject.toml
debian/: changelog  control  copyright  ethercat_igh_dkms_init  ethercat_igh_init  install  postinst  postrm  rules
dkms/: dkms.conf.example  dkms.conf.template  dkms.post_install.template
doc/src/: tests.rst
doc/src/dev_manual/: no_dkms_dev.rst
doc/src/user_manual/: no_dkms.rst
ethercat_igh_dkms/: __init__.py  ethercat_igh_dkms.py  get_hw_info.py  get_mac.py  parameters.py
scripts/: build.py  clean.py  first_install.py  install.py  post_install.py
tests/: conftest.py  test_build.py  test_write_config_file.py
