[tool.poetry]
name = "ethercat-igh-dkms"
version = "0.1.0"
description = ""
authors = ["Manuel YGUEL <yguel.robotics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
netifaces = "^0.11.0"
typeguard = "^4.3.0"
pathlib = "^1.0.1"
click = "^8.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "scripts.first_install:main"
build = "scripts.build:main"
clean = "scripts.clean:main"
install = "scripts.install:main"

